# polyhedron_kernel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  extendedplane.cpp  extendedplane.h  kernel.pro  main.cpp  polyhedron_kernel.cpp  polyhedron_kernel.h
old_versions/polyhedron_kernel_1.0/: sort_points.h
old_versions/polyhedron_kernel_2.0/: extendedplane.cpp  extendedplane.h  polyhedron_kernel.h  sort_points.h
polyhederon_kernel_version1/: kernel.pro  main.cpp  polyhedron_kernel.cpp  polyhedron_kernel.h
polyhedron_kernel_version1/: README.md
